# zmq_http_sql_cpp

task1/client/: Dockerfile
task1/client/src/: CMakeLists.txt  client.cpp  data_client.cpp  data_client.h  record.cpp
task1/server/: Dockerfile
task1/server/data/: randomize_data.py  student_file_1.txt  student_file_2.txt
task1/server/src/: data_server.cpp  data_server.h  record.cpp  record.h  server.cpp
task2/: script.py  task.db  task.sql
